# store

./: .dockerignore  .gitignore  .pre-commit-config.yaml  docker-compose.yml  manage.py  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_test.txt
compose/local/django/: Dockerfile
compose/local/django/celery/beat/: start
compose/local/django/celery/flower/: start
compose/local/django/celery/worker/: start
polls/: consumers.py  forms.py  routing.py  tasks.py  urls.py  views.py
polls/management/commands/: celery_worker.py
polls/templates/: form.html  form_ws.html
store/: asgi.py  celery.py  settings.py  urls.py
