[project]
requires-python = ">=3.12"
name = "store"

[tool.ruff]
target-version = "py312"
line-length = 119

[tool.ruff.lint]
select = ["ALL"]
exclude = [
    ".git",
    ".pre-commit-config.yml",
    ".gitignore",
    ".dockerignore",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".env",
    ".vscode",
    "__pypackages__",
    "__pycache__",
    "venv",
]
ignore = [
"D",
]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.isort]
section-order = ["future", "standard-library", "third-party", "drf", "django", "first-party", "local-folder"]

[tool.ruff.lint.isort.sections]
"drf" = ["rest_framework"]
"django" = ["django"]


[tool.mypy]
exclude = [
    "manage\\.py$",
    "/migrations/",
    "admin\\.py$",
    "venv",
]
install-types = true
ignore_missing_imports = true
